tests/baselines/reference/parseJsxElementInUnaryExpressionNoCrash2.errors.txt
tests/cases/compiler/a.js(1,9): error TS1109: Expression expected.


==== tests/cases/compiler/a.js (1 errors) ====
    ~<></> <
            
!!! error TS1109: Expression expected.
    